added additional message

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sleep Outside | Home</title>
   <link rel="stylesheet" href="/css/style.css" />
+  <script type="module">
+    import Alert from "./js/alert.js";
+    document.addEventListener('DOMContentLoaded', () => {
+      const alertInstance = new Alert();
+      alertInstance.init();
+    });
+  </script>
 </head>
 
 <body>
@@ -36,7 +43,7 @@
       </a>
     </div>
   </header>
-  <main class="divider">
+  <main class="divider alert-list">
     <div class="hero">
       <img src="/images/banner-sm.jpg" srcset="images/banner-sm.jpg 500w, images/banner.jpg"
         alt="image of a high mountain lake" />
